# Mincraft-Rock-Paper-Scissors-Mediapipe-Hands-demo

./: LICENSE  README.md  README_EN.md  README_JP.md
Mincraft-Rock-Paper-Scissors-Mediapipe-Hands-demo/: README.md  hands_mincraft.py  pyproject.toml
utils/: cvfpscalc.py
