[tool.poetry]
name = "mediapipe-samples"
version = "0.1.0"
description = ""
authors = ["naohiro2g <587586+Naohiro2g@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mediapipe = "^0.10.13"
streamlit = "^1.34.0"
streamlit-webrtc = "^0.47.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
